--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                             <p class="text-light">Control lighting and appliances via app or voice command.</p>
                         </div>
                         <div id="smartSwitch" class="collapse card-footer bg-black">
-                            <img src="switch.jpg" alt="Smart Switch Detail" class="img-fluid rounded mb-2">
+                            <img src="switch2.jpg" alt="Smart Switch Detail" class="img-fluid rounded mb-2">
                             <p class="small text-light">Smart switches allow seamless control of lights and devices
                                 using your phone or voice assistant. Smart switches are programmable wireless devices
                                 that replace traditional light switches, offering remote control, voice activation, and
