--- a/index.html
+++ b/index.html
@@ -275,117 +275,7 @@
             </div>
         </div>
     </section>
-
-<section class="testimonial-section py-5" style="background-color: #000;">
-  <div class="container">
-    <h2 class="text-center text-white mb-5 fw-bold">What Our Customers Say</h2>
-
-    <div class="row g-4">
-
-      <!-- Testimonial Card -->
-      <div class="col-md-6 col-lg-4">
-        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
-          <div class="mb-3">
-            <h5 class="mb-0">Priya Sharma</h5>
-            <small class="text-muted">Interior Designer, Delhi</small>
-          </div>
-          <div class="text-warning mb-2">★★★★★ <small class="text-muted">(4.7)</small></div>
-          <p class="fst-italic mb-0">“Nexora completely changed the vibe of my home! The automation is seamless, and their team was super friendly.”</p>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-4">
-        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
-          <div class="mb-3">
-            <h5 class="mb-0">Sneha Iyer</h5>
-            <small class="text-muted">Architect, Chennai</small>
-          </div>
-          <div class="text-warning mb-2">★★★★½ <small class="text-muted">(4.5)</small></div>
-          <p class="fst-italic mb-0">“Impressed with Nexora’s fast setup and clean design. I recommend it to anyone building a modern home.”</p>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-4">
-        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
-          <div class="mb-3">
-            <h5 class="mb-0">Amit Kulkarni</h5>
-            <small class="text-muted">Business Owner, Pune</small>
-          </div>
-          <div class="text-warning mb-2">★★★★★ <small class="text-muted">(5.0)</small></div>
-          <p class="fst-italic mb-0">“Professional service and on-time delivery. My office feels futuristic thanks to Nexora.”</p>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-4">
-        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
-          <div class="mb-3">
-            <h5 class="mb-0">Neha Reddy</h5>
-            <small class="text-muted">Freelancer, Hyderabad</small>
-          </div>
-          <div class="text-warning mb-2">★★★★½ <small class="text-muted">(4.6)</small></div>
-          <p class="fst-italic mb-0">“The app is easy to use, and I love the lighting control. My guests are always impressed!”</p>
-        </div>
-      </div>
-
-      <div class="col-md-6 col-lg-4">
-        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
-          <div class="mb-3">
-            <h5 class="mb-0">Karan Mehta</h5>
-            <small class="text-muted">Startup Founder, Bengaluru</small>
-          </div>
-          <div class="text-warning mb-2">★★★★☆ <small class="text-muted">(4.3)</small></div>
-          <p class="fst-italic mb-0">“I control my entire house from my phone. Nexora nailed it with smart security and energy savings.”</p>
-        </div>
-      </div>
-
-
-      <div class="col-md-6 col-lg-4">
-        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
-          <div class="mb-3">
-            <h5 class="mb-0">Anil Joshi</h5>
-            <small class="text-muted">Real Estate Agent, Ahmedabad</small>
-          </div>
-          <div class="text-warning mb-2">★★★★½ <small class="text-muted">(4.8)</small></div>
-          <p class="fst-italic mb-0">“I’ve recommended Nexora to many clients. It's a value addition to any premium property.”</p>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- Add this CSS to your <style> tag or external stylesheet -->
-<style>
-  .testimonial-card {
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-
-  .testimonial-card:hover {
-    transform: scale(1.03);
-    box-shadow: 0 10px 25px rgba(255, 255, 255, 0.2);
-  }
-</style>
-
-
-
-
-
-    <section id="about" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="text-center mb-4 fw-bold">About Nexora</h2>
-            <p class="text-center mx-auto" style="max-width: 800px;">
-                Nexora is a service-based smart home solutions company based in Bengaluru, dedicated to transforming
-                everyday living with intelligent automation.
-                We help you elevate your home lifestyle through secure, energy-efficient, and beautifully integrated
-                smart
-                systems.
-                Our goal is to bring comfort, convenience, and control to your fingertips—customized for your unique
-                needs.
-            </p>
-        </div>
-    </section>
-
-    <section id="services" class="py-5" style="background-color: black; color: grey;">
+<section id="services" class="py-5" style="background-color: black; color: grey;">
         <div class="container">
             <h2 class="text-center mb-5 fw-bold text-white">Our Smart Services</h2>
             <div class="row g-4">
@@ -426,7 +316,7 @@
                             <p class="text-light">Control lighting and appliances via app or voice command.</p>
                         </div>
                         <div id="smartSwitch" class="collapse card-footer bg-black">
-                            <img src="switch2.jpg" alt="Smart Switch Detail" class="img-fluid rounded mb-2">
+                            <img src="switch.jpg" alt="Smart Switch Detail" class="img-fluid rounded mb-2">
                             <p class="small text-light">Smart switches allow seamless control of lights and devices
                                 using your phone or voice assistant. Smart switches are programmable wireless devices
                                 that replace traditional light switches, offering remote control, voice activation, and
@@ -586,6 +476,117 @@
             </div>
         </div>
     </section>
+
+<section class="testimonial-section py-5" style="background-color: #000;">
+  <div class="container">
+    <h2 class="text-center text-white mb-5 fw-bold">What Our Customers Say</h2>
+
+    <div class="row g-4">
+
+      <!-- Testimonial Card -->
+      <div class="col-md-6 col-lg-4">
+        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
+          <div class="mb-3">
+            <h5 class="mb-0">Priya Sharma</h5>
+            <small class="text-muted">Interior Designer, Delhi</small>
+          </div>
+          <div class="text-warning mb-2">★★★★★ <small class="text-muted">(4.7)</small></div>
+          <p class="fst-italic mb-0">“Nexora completely changed the vibe of my home! The automation is seamless, and their team was super friendly.”</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
+          <div class="mb-3">
+            <h5 class="mb-0">Sneha Iyer</h5>
+            <small class="text-muted">Architect, Chennai</small>
+          </div>
+          <div class="text-warning mb-2">★★★★½ <small class="text-muted">(4.5)</small></div>
+          <p class="fst-italic mb-0">“Impressed with Nexora’s fast setup and clean design. I recommend it to anyone building a modern home.”</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
+          <div class="mb-3">
+            <h5 class="mb-0">Amit Kulkarni</h5>
+            <small class="text-muted">Business Owner, Pune</small>
+          </div>
+          <div class="text-warning mb-2">★★★★★ <small class="text-muted">(5.0)</small></div>
+          <p class="fst-italic mb-0">“Professional service and on-time delivery. My office feels futuristic thanks to Nexora.”</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
+          <div class="mb-3">
+            <h5 class="mb-0">Neha Reddy</h5>
+            <small class="text-muted">Freelancer, Hyderabad</small>
+          </div>
+          <div class="text-warning mb-2">★★★★½ <small class="text-muted">(4.6)</small></div>
+          <p class="fst-italic mb-0">“The app is easy to use, and I love the lighting control. My guests are always impressed!”</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
+          <div class="mb-3">
+            <h5 class="mb-0">Karan Mehta</h5>
+            <small class="text-muted">Startup Founder, Bengaluru</small>
+          </div>
+          <div class="text-warning mb-2">★★★★☆ <small class="text-muted">(4.3)</small></div>
+          <p class="fst-italic mb-0">“I control my entire house from my phone. Nexora nailed it with smart security and energy savings.”</p>
+        </div>
+      </div>
+
+
+      <div class="col-md-6 col-lg-4">
+        <div class="testimonial-card bg-white text-dark p-4 rounded-4 shadow h-100">
+          <div class="mb-3">
+            <h5 class="mb-0">Anil Joshi</h5>
+            <small class="text-muted">Real Estate Agent, Ahmedabad</small>
+          </div>
+          <div class="text-warning mb-2">★★★★½ <small class="text-muted">(4.8)</small></div>
+          <p class="fst-italic mb-0">“I’ve recommended Nexora to many clients. It's a value addition to any premium property.”</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- Add this CSS to your <style> tag or external stylesheet -->
+<style>
+  .testimonial-card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .testimonial-card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 10px 25px rgba(255, 255, 255, 0.2);
+  }
+</style>
+
+
+
+
+
+    <section id="about" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4 fw-bold">About Nexora</h2>
+            <p class="text-center mx-auto" style="max-width: 800px;">
+                Nexora is a service-based smart home solutions company based in Bengaluru, dedicated to transforming
+                everyday living with intelligent automation.
+                We help you elevate your home lifestyle through secure, energy-efficient, and beautifully integrated
+                smart
+                systems.
+                Our goal is to bring comfort, convenience, and control to your fingertips—customized for your unique
+                needs.
+            </p>
+        </div>
+    </section>
+
+    
     <script>
         document.querySelectorAll('.collapse').forEach(function (collapseElement) {
             collapseElement.addEventListener('hidden.bs.collapse', function () {
